--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>小明osu大電神</title>
-  <meta name="description" content="">
+  <meta name="description" content="我叫做小明，是個電神">
   <meta name="keywords" content="">
   <meta name="author" content="">
 
